{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 232,
  "lineage": "c20c724f-e249-8090-8aa0-8509b2cd3a53",
  "resources": [
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079f852aeebc2d98f",
            "arn": "arn:aws:ec2:ap-southeast-2:323135480174:elastic-ip/eipalloc-079f852aeebc2d98f",
            "association_id": "eipassoc-02ba4b08df866b5e3",
            "domain": "vpc",
            "id": "eipalloc-079f852aeebc2d98f",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-03dbdadc7919eb499",
            "private_dns": "ip-10-0-1-65.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.65",
            "public_dns": "ec2-54-206-201-233.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.206.201.233",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "eip-0"
            },
            "tags_all": {
              "Name": "eip-0"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.internet_gateway",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019292f8d8e609fa6",
            "arn": "arn:aws:ec2:ap-southeast-2:323135480174:elastic-ip/eipalloc-019292f8d8e609fa6",
            "association_id": "eipassoc-0cc376f781448982c",
            "domain": "vpc",
            "id": "eipalloc-019292f8d8e609fa6",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0301c437c9ffbb639",
            "private_dns": "ip-10-0-2-51.ap-southeast-2.compute.internal",
            "private_ip": "10.0.2.51",
            "public_dns": "ec2-13-236-38-226.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.236.38.226",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "eip-1"
            },
            "tags_all": {
              "Name": "eip-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.internet_gateway",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f86db6889f86f90",
            "arn": "arn:aws:ec2:ap-southeast-2:323135480174:elastic-ip/eipalloc-01f86db6889f86f90",
            "association_id": "eipassoc-0fe2b2a473467b8bb",
            "domain": "vpc",
            "id": "eipalloc-01f86db6889f86f90",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0ac21b92425b1ee3d",
            "private_dns": "ip-10-0-3-200.ap-southeast-2.compute.internal",
            "private_ip": "10.0.3.200",
            "public_dns": "ec2-13-238-99-118.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.238.99.118",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "eip-2"
            },
            "tags_all": {
              "Name": "eip-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.internet_gateway",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:323135480174:internet-gateway/igw-0974ef4b9a69cbe46",
            "id": "igw-0974ef4b9a69cbe46",
            "owner_id": "323135480174",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-0cb2dd67ac4b47b82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nats",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079f852aeebc2d98f",
            "association_id": "eipassoc-02ba4b08df866b5e3",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d20580fcf9c225ee",
            "network_interface_id": "eni-03dbdadc7919eb499",
            "private_ip": "10.0.1.65",
            "public_ip": "54.206.201.233",
            "region": "ap-southeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05ba84fcc20768863",
            "vpc_id": "vpc-0cb2dd67ac4b47b82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.internet_gateway",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019292f8d8e609fa6",
            "association_id": "eipassoc-0cc376f781448982c",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0a884f0f880604c15",
            "network_interface_id": "eni-0301c437c9ffbb639",
            "private_ip": "10.0.2.51",
            "public_ip": "13.236.38.226",
            "region": "ap-southeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02fc28b852b9e73f1",
            "vpc_id": "vpc-0cb2dd67ac4b47b82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.internet_gateway",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f86db6889f86f90",
            "association_id": "eipassoc-0fe2b2a473467b8bb",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0c2b43e2e6245f7b7",
            "network_interface_id": "eni-0ac21b92425b1ee3d",
            "private_ip": "10.0.3.200",
            "public_ip": "13.238.99.118",
            "region": "ap-southeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cecb815435e5d003",
            "vpc_id": "vpc-0cb2dd67ac4b47b82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.internet_gateway",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_routes",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0420c67f63a4139a71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d20580fcf9c225ee",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0420c67f63a4139a7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0420c67f63a4139a7"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.internet_gateway",
            "module.aws_vpc.aws_nat_gateway.nats",
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b921f2093894f1631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a884f0f880604c15",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0b921f2093894f163",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0b921f2093894f163"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.internet_gateway",
            "module.aws_vpc.aws_nat_gateway.nats",
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-068d950d4803fa0801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c2b43e2e6245f7b7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-068d950d4803fa080",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-2",
            "route_table_id": "rtb-068d950d4803fa080"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.internet_gateway",
            "module.aws_vpc.aws_nat_gateway.nats",
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_routes",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0974ef4b9a69cbe46",
            "id": "r-rtb-01e50e1e4f1dae5571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-01e50e1e4f1dae557",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-2",
            "route_table_id": "rtb-01e50e1e4f1dae557"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.internet_gateway",
            "module.aws_vpc.aws_route_table.public_table",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0974ef4b9a69cbe46",
            "id": "r-rtb-09c1a9c914ab8c6f61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-09c1a9c914ab8c6f6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-2",
            "route_table_id": "rtb-09c1a9c914ab8c6f6"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.internet_gateway",
            "module.aws_vpc.aws_route_table.public_table",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0974ef4b9a69cbe46",
            "id": "r-rtb-0bd384f5b74fe800c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0bd384f5b74fe800c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0bd384f5b74fe800c"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.internet_gateway",
            "module.aws_vpc.aws_route_table.public_table",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_tables",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:323135480174:route-table/rtb-0420c67f63a4139a7",
            "id": "rtb-0420c67f63a4139a7",
            "owner_id": "323135480174",
            "propagating_vgws": [
              "vgw-05cdea412f764811d"
            ],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d20580fcf9c225ee",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table-0"
            },
            "tags_all": {
              "Name": "private_route_table-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb2dd67ac4b47b82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "id": "rtb-0420c67f63a4139a7",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:323135480174:route-table/rtb-0b921f2093894f163",
            "id": "rtb-0b921f2093894f163",
            "owner_id": "323135480174",
            "propagating_vgws": [
              "vgw-05cdea412f764811d"
            ],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a884f0f880604c15",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table-1"
            },
            "tags_all": {
              "Name": "private_route_table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb2dd67ac4b47b82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "id": "rtb-0b921f2093894f163",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:323135480174:route-table/rtb-068d950d4803fa080",
            "id": "rtb-068d950d4803fa080",
            "owner_id": "323135480174",
            "propagating_vgws": [
              "vgw-05cdea412f764811d"
            ],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c2b43e2e6245f7b7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table-2"
            },
            "tags_all": {
              "Name": "private_route_table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb2dd67ac4b47b82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "id": "rtb-068d950d4803fa080",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_table",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:323135480174:route-table/rtb-01e50e1e4f1dae557",
            "id": "rtb-01e50e1e4f1dae557",
            "owner_id": "323135480174",
            "propagating_vgws": [
              "vgw-05cdea412f764811d"
            ],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0974ef4b9a69cbe46",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table-0"
            },
            "tags_all": {
              "Name": "public_route_table-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb2dd67ac4b47b82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "id": "rtb-01e50e1e4f1dae557",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:323135480174:route-table/rtb-09c1a9c914ab8c6f6",
            "id": "rtb-09c1a9c914ab8c6f6",
            "owner_id": "323135480174",
            "propagating_vgws": [
              "vgw-05cdea412f764811d"
            ],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0974ef4b9a69cbe46",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table-1"
            },
            "tags_all": {
              "Name": "public_route_table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb2dd67ac4b47b82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "id": "rtb-09c1a9c914ab8c6f6",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:323135480174:route-table/rtb-0bd384f5b74fe800c",
            "id": "rtb-0bd384f5b74fe800c",
            "owner_id": "323135480174",
            "propagating_vgws": [
              "vgw-05cdea412f764811d"
            ],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0974ef4b9a69cbe46",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table-2"
            },
            "tags_all": {
              "Name": "public_route_table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb2dd67ac4b47b82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "id": "rtb-0bd384f5b74fe800c",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_private_routes",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f476521896579120",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0420c67f63a4139a7",
            "subnet_id": "subnet-0a89425a9ae7842fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.private_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06396162a6b091b8a",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0b921f2093894f163",
            "subnet_id": "subnet-0cec0947616f620b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.private_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b2996657a69f217",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-068d950d4803fa080",
            "subnet_id": "subnet-03bc54d618bec8817"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.private_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_public_routes",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f96d98ab5da0cb4a",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-01e50e1e4f1dae557",
            "subnet_id": "subnet-05ba84fcc20768863"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_vpc.aws_route_table.public_table",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e84b1b0ae40f7c26",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-09c1a9c914ab8c6f6",
            "subnet_id": "subnet-02fc28b852b9e73f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_vpc.aws_route_table.public_table",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f93e6e3d58ee339f",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0bd384f5b74fe800c",
            "subnet_id": "subnet-0cecb815435e5d003"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aws_vpc.aws_route_table.public_table",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_groups",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "custom-security-group",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:323135480174:security-group/sg-014c29a9dfa152182",
            "description": "Inbound \u0026 Outbound traffic for custom-security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014c29a9dfa152182",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All ICMP Traffic on Subnet",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All TCP Traffic on Subnet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All Traffic from NodePort",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32727
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "custom-security-group",
            "name_prefix": "",
            "owner_id": "323135480174",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cb2dd67ac4b47b82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "id": "sg-014c29a9dfa152182",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:323135480174:subnet/subnet-0a89425a9ae7842fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a89425a9ae7842fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323135480174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "private_subnet-0",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private_subnet-0",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0cb2dd67ac4b47b82"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "id": "subnet-0a89425a9ae7842fd",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:323135480174:subnet/subnet-0cec0947616f620b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cec0947616f620b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323135480174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "private_subnet-1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private_subnet-1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0cb2dd67ac4b47b82"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "id": "subnet-0cec0947616f620b8",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:323135480174:subnet/subnet-03bc54d618bec8817",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bc54d618bec8817",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323135480174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "private_subnet-2",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private_subnet-2",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0cb2dd67ac4b47b82"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "id": "subnet-03bc54d618bec8817",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:323135480174:subnet/subnet-05ba84fcc20768863",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ba84fcc20768863",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323135480174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "public_subnet-0",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public_subnet-0",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0cb2dd67ac4b47b82"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "id": "subnet-05ba84fcc20768863",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:323135480174:subnet/subnet-02fc28b852b9e73f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fc28b852b9e73f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323135480174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "public_subnet-1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public_subnet-1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0cb2dd67ac4b47b82"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "id": "subnet-02fc28b852b9e73f1",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:323135480174:subnet/subnet-0cecb815435e5d003",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cecb815435e5d003",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323135480174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "public_subnet-2",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public_subnet-2",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0cb2dd67ac4b47b82"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "id": "subnet-0cecb815435e5d003",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:323135480174:vpc/vpc-0cb2dd67ac4b47b82",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-031a8cc817a92cb36",
            "default_route_table_id": "rtb-0a9b931efd29f553a",
            "default_security_group_id": "sg-0e50cf0b9f583f621",
            "dhcp_options_id": "dopt-00f38ce0bc6056c62",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cb2dd67ac4b47b82",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a9b931efd29f553a",
            "owner_id": "323135480174",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "custom-vpc",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "custom-vpc",
              "kubernetes.io/cluster/eks-cluster": "shared"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "323135480174",
            "id": "vpc-0cb2dd67ac4b47b82",
            "region": "ap-southeast-2"
          }
        }
      ]
    }
  ]
}